--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -5550,7 +5550,7 @@
     <unit id="2xvpkUu">
       <segment>
         <source>{attacker} ist {defender} an die Gurgel gesprungen und hat ihn ohne mit der Wimper zu zucken verspeist!</source>
-        <target>{attacker} ist {defender} an die Gurgel gesprungen und hat ihn ohne mit der Wimper zu zucken verspeist!</target>
+        <target><![CDATA[{attacker} ist {defender} an die Gurgel gesprungen und hat ihn ohne mit der Wimper zu zucken <strong>verspeist</strong>!!]]></target>
       </segment>
     </unit>
     <unit id="Qlh.l61">
@@ -5814,7 +5814,7 @@
     <unit id="bGpi8xS">
       <segment>
         <source>Mit ein paar unschönen Tritten gegen seinen Kopf vergewisserst du dich, dass er garantiert nicht mehr aufstehen wird. Na los! Bring deinen Job zuende und verspeise ihn!</source>
-        <target>Mit ein paar unschönen Tritten gegen seinen Kopf vergewisserst du dich, dass er garantiert nicht mehr aufstehen wird. Na los! Bring deinen Job zuende und verspeise ihn!</target>
+        <target><![CDATA[Mit ein paar unschönen Tritten gegen seinen Kopf vergewisserst du dich, dass er garantiert nicht mehr aufstehen wird. <strong>Na los! Bring deinen Job zuende und verspeise ihn!</strong>]]></target>
       </segment>
     </unit>
     <unit id="wzmYlE_" name="Gut gemacht!">
@@ -5946,7 +5946,7 @@
     <unit id="dyUt3up" name="Aus der Stadt schleichen">
       <segment>
         <source>Aus der Stadt schleichen</source>
-        <target>Aus der Stadt schleichen</target>
+        <target>Unauffällig rausgehen</target>
       </segment>
     </unit>
     <unit id="GulZlLD" name="Nutze deine heilenden Hände">
@@ -5974,7 +5974,7 @@
     <unit id="sVhAGjc" name="Diesen Bürger verspeisen!">
       <segment>
         <source>Diesen Bürger verspeisen!</source>
-        <target>Diesen Bürger verspeisen!</target>
+        <target>Diesen Bürger verschlingen!</target>
       </segment>
     </unit>
     <unit id="6IAuVw5" name="Die Leiche verspeisen!">
@@ -5986,7 +5986,7 @@
     <unit id="isIvO1g" name="In die Stadt schleichen">
       <segment>
         <source>In die Stadt schleichen</source>
-        <target>In die Stadt schleichen</target>
+        <target>Die Stadt heimlich betreten</target>
       </segment>
     </unit>
     <unit id="Ztj0B29">
@@ -11201,13 +11201,13 @@
     <unit id="M80SaEv">
       <segment>
         <source>Die Chance, beim Verschlingen eines Bürgers entdeckt zu werden, ist {chances}...</source>
-        <target>Die Chance, beim Verschlingen eines Bürgers entdeckt zu werden, ist {chances}...</target>
+        <target>Deine Wahrscheinlichkeit, beim Verzehr eines Mitbürgers entdeckt zu werden, ist {chances}.</target>
       </segment>
     </unit>
     <unit id="qD3lUP9">
       <segment>
         <source>Das Risiko basiert auf der Anzahl der Bürger in der Aussenwelt. Je mehr Bürger sich außerhalb der Stadt aufhalten, desto geringer sind die Chancen, entdeckt zu werden.</source>
-        <target>Das Risiko basiert auf der Anzahl der Bürger in der Aussenwelt. Je mehr Bürger sich außerhalb der Stadt aufhalten, desto geringer sind die Chancen, entdeckt zu werden.</target>
+        <target>Die Risikowahrscheinlichkeit hängt von der Anzahl der Bürger ab, die sich in der Außenwelt aufhalten. Je weniger Leute sich in der Stadt aufhalten, desto geringer die Chance, erwischt zu werden.</target>
       </segment>
     </unit>
     <unit id="8yLsMnc">
@@ -13437,7 +13437,7 @@
     <unit id="Fu0IcEb">
       <segment>
         <source>WARNUNG: Es besteht eine große Chance, dass du von anderen Bürgern entdeckt wirst, wenn du jemanden in der Stadt verschlingst! Mach das besser in der Aussenwelt...</source>
-        <target>WARNUNG: Es besteht eine große Chance, dass du von anderen Bürgern entdeckt wirst, wenn du jemanden in der Stadt verschlingst! Mach das besser in der Aussenwelt...</target>
+        <target>ACHTUNG: Die Wahrscheinlichkeit entdeckt zu werden ist in der Stadt wesentlich höher. Warum nicht ein kleiner Mord in der Außenwelt? Das wird kaum einer merken...</target>
       </segment>
     </unit>
     <unit id="lN02s2b">
