--- a/translations/login+intl-icu.es.xlf
+++ b/translations/login+intl-icu.es.xlf
@@ -843,5 +843,16 @@
         <target>Tu nombre de usuario de EternalTwin contiene elementos que no están permitidos en MyHordes. Debes cambiar tu nombre de EternalTwin para poder ingresar en MyHordes.</target>
       </segment>
     </unit>
+    <unit id=".gp.m4T">
+      <notes>
+        <note category="german">Der eingegebene Spieler ist nicht für das Patenschafts-Programm registriert. Bitte ihn, die "Freundschaft"-Seite in seiner Seele aufzurufen; er wird dann automatisch registriert. Erst dann kannst du ihn als Sponsor auswählen.</note>
+        <note category="from">php:///src/Controller/PublicController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Der eingegebene Spieler ist nicht für das Patenschafts-Programm registriert. Bitte ihn, die "Freundschaft"-Seite in seiner Seele aufzurufen; er wird dann automatisch registriert. Erst dann kannst du ihn als Sponsor auswählen.</source>
+        <target>Der eingegebene Spieler ist nicht für das Patenschafts-Programm registriert. Bitte ihn, die "Freundschaft"-Seite in seiner Seele aufzurufen; er wird dann automatisch registriert. Erst dann kannst du ihn als Sponsor auswählen.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
