--- a/translations/login+intl-icu.en.xlf
+++ b/translations/login+intl-icu.en.xlf
@@ -843,5 +843,16 @@
         <target>Your EternalTwin display name contains elements that are not allowed on MyHordes. To log in with your EternalTwin account, you must change its display name.</target>
       </segment>
     </unit>
+    <unit id=".gp.m4T">
+      <notes>
+        <note category="german">Der eingegebene Spieler ist nicht für das Patenschafts-Programm registriert. Bitte ihn, die "Freundschaft"-Seite in seiner Seele aufzurufen; er wird dann automatisch registriert. Erst dann kannst du ihn als Sponsor auswählen.</note>
+        <note category="from">php:///src/Controller/PublicController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Der eingegebene Spieler ist nicht für das Patenschafts-Programm registriert. Bitte ihn, die "Freundschaft"-Seite in seiner Seele aufzurufen; er wird dann automatisch registriert. Erst dann kannst du ihn als Sponsor auswählen.</source>
+        <target>The player you've selected is not currently enrolled in the sponsorship program. Ask them to visit the "Friendship" page in their soul; this will automatically register them. Only then can you select them as your sponsor.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
