--- a/translations/global+intl-icu.de.xlf
+++ b/translations/global+intl-icu.de.xlf
@@ -2325,5 +2325,41 @@
         <target>Thanks to</target>
       </segment>
     </unit>
+    <unit id="rtPvko.">
+      <segment>
+        <source>Dies ist ein Fan-Projekt für die Spiele {dv}, {d2n}, {hordes} und {zn} von &lt;b&gt;MotionTwin&lt;/b&gt;.</source>
+        <target><![CDATA[Dies ist ein Fan-Projekt für die Spiele {dv}, {d2n}, {hordes} und {zn} von <b>MotionTwin</b>.]]></target>
+      </segment>
+    </unit>
+    <unit id="XQQqX1B">
+      <segment>
+        <source>All Grafiken stammen aus diesen Spielen, wenn nicht explizit anders angegeben, und sind damit Eigentum von &lt;b&gt;MotionTwin&lt;/b&gt;</source>
+        <target><![CDATA[All Grafiken stammen aus diesen Spielen, wenn nicht explizit anders angegeben, und sind damit Eigentum von <b>MotionTwin</b>]]></target>
+      </segment>
+    </unit>
+    <unit id="3DaiPcH">
+      <segment>
+        <source>MyHordes ist &lt;i&gt;Open Source&lt;/i&gt; und jeder ist zur &lt;b&gt;Mitwirkung&lt;/b&gt; eingeladen. Du findest den Quellcode bei {gitlab}.</source>
+        <target><![CDATA[MyHordes ist <i>Open Source</i> und jeder ist zur <b>Mitwirkung</b> eingeladen. Du findest den Quellcode bei {gitlab}.]]></target>
+      </segment>
+    </unit>
+    <unit id="nWYafS5">
+      <segment>
+        <source>MyHordes ist ein Teil des {etwin} Projekts, du kannst uns auf {opencollective} mit einer Spende unterstützen.</source>
+        <target>MyHordes ist ein Teil des {etwin} Projekts, du kannst uns auf {opencollective} mit einer Spende unterstützen.</target>
+      </segment>
+    </unit>
+    <unit id="yyNYNPS" name="Programmierung">
+      <segment>
+        <source>Programmierung</source>
+        <target>Programmierung</target>
+      </segment>
+    </unit>
+    <unit id="q_Mqx8l" name="Danke an">
+      <segment>
+        <source>Danke an</source>
+        <target>Danke an</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
